Further refactor of CSS to SCSS file

--- a/events/templates/events/detail/panel/active_locations.html
+++ b/events/templates/events/detail/panel/active_locations.html
@@ -3,7 +3,7 @@
 <li class="list-group-item cp-item" id='active-locs'>
   <ul class="list-group ml-2">
     <li class="list-group-item py-2 toggle">
-        <div class='panel-icon locs-icon align-middle d-inline-block'></div>
+        <div class='panel-icon locs-icon icon icon-locations align-middle d-inline-block'></div>
         <div class='panel-label align-middle d-inline-block ml-2'>Active Locations</div>
     </li>
     <ul class="list-group inner">
