--- a/events/templates/events/detail/panel/arrival_times.html
+++ b/events/templates/events/detail/panel/arrival_times.html
@@ -3,7 +3,7 @@
 <li class="list-group-item cp-item" id='arrival-times'>
   <ul class="list-group ml-2">
     <li class="list-group-item py-2 toggle">
-        <div class='panel-icon arrival-icon align-middle d-inline-block'></div>
+        <div class='panel-icon arrival-icon icon icon-arrival align-middle d-inline-block'></div>
         <div class='panel-label align-middle d-inline-block ml-2'>Arrival Times</div>
     </li>
     <ul class="list-group inner">
