--- a/events/templates/events/detail/panel/display.html
+++ b/events/templates/events/detail/panel/display.html
@@ -3,7 +3,7 @@
 <li class="list-group-item cp-item" id='highlight-shifts'>
   <ul class="list-group ml-2">
     <li class="list-group-item py-2 toggle">
-      <div class='panel-icon display-icon align-middle d-inline-block'></div>
+      <div class='panel-icon display-icon icon icon-display align-middle d-inline-block'></div>
       <div class='panel-label align-middle d-inline-block ml-2'>Highlight</div>
     </li>
     <ul class="list-group inner">
