--- a/events/templates/events/detail/panel/employees.html
+++ b/events/templates/events/detail/panel/employees.html
@@ -3,7 +3,7 @@
 <li class="list-group-item cp-item" id='employee-list'>
   <ul class="list-group ml-2">
     <li class="list-group-item py-2 toggle">
-        <div class='panel-icon employees-icon align-middle d-inline-block'></div>
+        <div class='panel-icon employees-icon icon icon-employees align-middle d-inline-block'></div>
         <div class='panel-label align-middle d-inline-block ml-2'>Employees</div>
     </li>
     <ul class="list-group inner show">
