--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -2,11 +2,8 @@
 {% regroup events by event_category as active_list %}
 {% for event_category in active_list %}
 
-
 <div class='event-row py-3 px-3 mb-4'>
-  <a class='table-header mb-3'>
-    {% cycle 'Upcoming Events' 'Previous Events' %}
-  </a>
+  <a class='table-header mb-3'>{% cycle 'Upcoming Events' 'Previous Events' %}</a>
   <table class="table table-striped table-hover" id="{% cycle 'upcoming-events' 'previous-events' %}">
     <thead>
       <tr class='header text-center'>
@@ -25,10 +22,8 @@
         <th onclick="sortTable(4, 'previous-events')" scope="col"><a>Alcohol</a></th>
         <th scope="col">Edit</th>
         {% endif %}
-        
       </tr>
     </thead>
-
     <tbody>
     {% for event in event_category.list %}
       <tr>
@@ -38,7 +33,6 @@
         <td class='text-center'>{% firstof event.schedule.scheduled '0' %}</td>
         <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
         {% include 'objects/list_display/edit_delete.html' with obj=obj id=event.id %}
-
       </tr>
       {% empty %}
       <tr>
@@ -46,8 +40,6 @@
       </tr>
     {% endfor %}
     </tbody>
-    
   </table>
 </div>
-
 {% endfor %}
