--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,9 +1,6 @@
 {% load staticfiles %}
-<nav class="navbar navbar-expand-lg navbar-dark background-container mb-0">
+<nav class="navbar navbar-expand-lg navbar-dark background-container mb-0" id='navbar'>
   <div class="container-fluid">
-    <!--<a class="navbar-brand" href="#">-->
-    <!--  <img class='company-logo' src='{% static "img/logo.png" %}' alt="Company Logo"/>-->
-    <!--</a>-->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/company/profile">Profile</a></li>
       <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
@@ -12,9 +9,5 @@
       <li class="nav-item"><a class="nav-link" href="/features/sms-text">SMS Text</a></li>
       <li class="nav-item"><a class="nav-link" href="/schedules/templates">Templates</a></li>
     </ul>
-    <!--<form class="form-inline my-2 my-lg-0">-->
-    <!--  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
-    <!--  <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>-->
-    <!--</form>-->
   </div>
 </nav>
