--- a/templates/objects/list_display/edit_delete.html
+++ b/templates/objects/list_display/edit_delete.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 <td>
   <button type="button" class="btn js-update-object" data-url="{% url obj|add:'_update' id %}">
-    <img class='icon-edit 'src='{% static "img/icons/objects/edit.png" %}' alt="Edit Icon"/>
+    <div class='icon icon-edit' alt='Edit Icon'></div>
   </button>
   <button type="button" class="btn js-delete-object" data-url="{% url obj|add:'_delete' id %}">
-    <img class='icon-delete' src='{% static "img/icons/objects/delete.png" %}' alt="Delete Icon"/>
+    <div class='icon icon-delete' alt='Delete Icon'></div>
   </button>
 </td>
