--- a/events/templates/events/detail/event-detail.html
+++ b/events/templates/events/detail/event-detail.html
@@ -6,13 +6,13 @@
   {% include 'events/detail/hidden.html' %}
   <div class='container-fluid'>
     <div class='row'>
-      {% include 'events/detail/panel.html' %}
+      {% include 'events/detail/cp/panel.html' %}
       <div class='col'>
-        {% include 'events/detail/event_header.html'%}
-        {% include 'events/detail/ed-board.html' %}
+        {% include 'events/detail/ed-header/header.html'%}
+        {% include 'events/detail/ed-board/board.html' %}
       </div>
     </div>
-  <!--</div>-->
+  </div>
 </section>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
