--- a/schedules/templates/schedules/create.html
+++ b/schedules/templates/schedules/create.html
@@ -37,7 +37,7 @@
         <div class='card show' id='collapseCP'>
           <div class='mx-3 mb-4'  style='background: #e8ebf1;'>
             <div class='card-body' style='margin-left:30px;margin-right:30px;color:#5e6673;'>
-              {% include 'schedules/template_cp.html' %}
+              {% include 'schedules/template-cp.html' %}
             </div>
           </div>
           <hr/>
