--- a/sms/templates/sms/sms-text.html
+++ b/sms/templates/sms/sms-text.html
@@ -18,10 +18,7 @@
         <div class='col col-7'>
           <div class='card shadow-custom'>
             <div class='card-body mx-4 align-center'>
-              <a class='table-header mb-3'>Command / Response</a>
-              
-              
-              
+              <a class='multi-header mb-3'>Command / Response</a>
               
               <table class="table table-striped table-hover" id='object-table'>
   
@@ -64,7 +61,7 @@
               
               
               
-              <a class='table-header mb-3'>Admins</a>
+              <a class='multi-header mb-3'>Admins</a>
               <table class="table table-striped table-hover" id='object-table'>
   
                 <thead>
