--- a/company_profile/templates/company-profile/company-profile.html
+++ b/company_profile/templates/company-profile/company-profile.html
@@ -10,7 +10,7 @@
       <div class='row'>
         <div class='col col-12'>
           <h2>
-            <span class='title'>{{obj}}</span>
+            <span class='single-header'>{{obj}}</span>
           </h2>
         </div>
       </div>
