--- a/events/templates/events/event-list.html
+++ b/events/templates/events/event-list.html
@@ -3,7 +3,7 @@
 {% for event_category in active_list %}
 
 <div class='event-row py-3 px-3 mb-4'>
-  <a class='table-header mb-3'>{% cycle 'Upcoming Events' 'Previous Events' %}</a>
+  <a class='multi-header text-uppercase mb-3'>{% cycle 'Upcoming Events' 'Previous Events' %}</a>
   <table class="table table-striped table-hover" id="{% cycle 'upcoming-events' 'previous-events' %}">
     <thead>
       <tr class='header text-center'>
@@ -32,7 +32,7 @@
         <td>{{event.doors_open}}</td>
         <td class='text-center'>{% firstof event.schedule.scheduled '0' %}</td>
         <td class='text-center'>{% include 'base/boolean.html' with bool=event.alcohol %}</td>
-        {% include 'objects/list_display/edit_delete.html' with obj=obj id=event.id %}
+        {% include 'objects/list-display/edit-delete.html' with id=event.id %}
       </tr>
       {% empty %}
       <tr>
