--- a/staticfiles/scss/base.scss
+++ b/staticfiles/scss/base.scss
@@ -1,15 +1,21 @@
 @import '../../events/static/events/scss/event-detail';
+
 body {
   font-family: 'Open Sans';
   background: #F7F7F7;
   color: #1B142D;
 }
+a:focus, input:focus {
+  box-shadow: none!important;
+  outline: none!important;
+}
+.bg-black {background: #000}
+
 .box-shadow {
   box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2)!important;
   transition: none;
   &:focus {color: rgb(51,51,51);}
 }
-#navbar {background-color: #000;}
 .icon {
   background-image: url('../img/spritesheet.png');
   width: 32px;
@@ -32,17 +38,28 @@ body {
   &employees.gradient {background-position: -79px -73px;}
 }
 
-// Undeprecate search?
-#searchInput {color: black; font-weight: 700; background: rgba(0,0,0,0);}
-#searchInput::placeholder {color: black; opacity: 1;}
-#searchInput:-ms-input-placeholder { color: black; }
-#searchInput::-ms-input-placeholder { color: black; }
+#search-input {
+  color: #000;
+  font-weight: 700;
+  background: #000;
+  &::placeholder {color: #000; opacity: 1;}
+  &:-ms-input-placeholder {color: #000;}
+  &::-ms-input-placeholder {color: #000;}
+}
 
-a:focus {
-  box-shadow: none!important;
-  outline: none!important;
+.list-view {
+  .single-header {
+    font-weight: 300;
+    font-size: 1.6em;
+  }
+  .multi-header {
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 24px;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+  }
 }
 
 
-.btn:focus, .input:focus, textarea:focus, text:focus, a:focus {}
-select:focus, textarea:focus, button:focus {outline: none!important; box-shadow: none!important;}
