--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<nav class="navbar navbar-expand-lg navbar-dark background-container mb-0" id='navbar'>
+<nav class="navbar navbar-dark navbar-expand-lg bg-black" id='navbar'>
   <div class="container-fluid">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/company/profile">Profile</a></li>
