--- a/events/templates/events/detail/event-detail.html
+++ b/events/templates/events/detail/event-detail.html
@@ -3,7 +3,7 @@
 {% block content %}  
 
 <section id='ed'>
-  {% include 'events/detail/hidden.html' %}
+  {% include 'events/detail/ed-board/hidden.html' %}
   <div class='container-fluid'>
     <div class='row'>
       {% include 'events/detail/cp/panel.html' %}
