--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -53,3 +53,14 @@
   height: 33px;
   display: inline-flex;
 }
+
+
+
+/*--------------*/
+
+#list-panel {
+  background: rgba(0, 0, 0, 0.83);
+  max-width: 15vw;
+  padding-top: 40px;
+  color: #FFF;
+}
