--- a/events/templates/events/event-list.html
+++ b/events/templates/events/event-list.html
@@ -4,7 +4,7 @@
 
 <div class='event-row py-3 px-3 mb-4'>
   <a class='multi-header text-uppercase mb-3'>{% cycle 'Upcoming Events' 'Previous Events' %}</a>
-  <table class="table table-striped table-hover" id="{% cycle 'upcoming-events' 'previous-events' %}">
+  <table class="table table-sm table-striped table-hover" id="{% cycle 'upcoming-events' 'previous-events' %}">
     <thead>
       <tr class='header text-center'>
         {% if forloop.first %}
@@ -24,7 +24,7 @@
         {% endif %}
       </tr>
     </thead>
-    <tbody>
+    <tbody style='vertical-align:middle;'>
     {% for event in event_category.list %}
       <tr>
         <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
