--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -15,24 +15,59 @@
   </div>
 
   <div class='col'>
+    
+  <div class="row px-4">
+      <div class='col-12 py-4'>
+        <div class='row event-header-details text-lowercase'>
+          <div class='col-12'>
+            <span class='event-title' style='font-size:1.5em;font-weight:100;'>{{objs}}</span>
+            
+            <div class='btn icon icon-create add-object js-create-object' style='vertical-align:top;' data-url="{% url obj|add:'-create' %}"></div>
+            
+            <form class='float-right'>
+              <select class="form-control" style='display:inline-block;width:200px;'>
+                <option>Save</option>
+                <option>Print</option>
+                <option>Export</option>
+                <option>Email</option>
+              </select>
+              <button type="button" class="btn btn-dark submit"><span>Submit</span></button>
+            </form><br />
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />  
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
     <div class='card-body mx-4 align-center'>
       <div class='row'>
-        <div class='col col-12'>
+        <div class='col-8'>
           
-          <h2 class='mb-3'>
-            <span class='text-uppercase single-header'>{{objs}}</span>
+          <!--<h2 class='mb-3'>-->
+          <!--  <span class='text-uppercase single-header'>{{objs}}</span>-->
             
-            {% if obj == 'template' %}
-              <a href='{% url "template-create" %}'><div class='icon icon-create btn' style='vertical-align:top;'></div></a>
-            {% else %}
-                <div class='btn icon icon-create add-object js-create-object' style='vertical-align:top;' data-url="{% url obj|add:'-create' %}">
-                </div>
-            {% endif %}
+          <!--  {% if obj == 'template' %}-->
+          <!--    <a href='{% url "template-create" %}'><div class='icon icon-create btn' style='vertical-align:top;'></div></a>-->
+          <!--  {% else %}-->
+          <!--      <div class='btn icon icon-create add-object js-create-object' style='vertical-align:top;' data-url="{% url obj|add:'-create' %}">-->
+          <!--      </div>-->
+          <!--  {% endif %}-->
             
-            <a href="{% url 'export-'|add:objs %}">
-              <div class='icon icon-download btn' style='vertical-align:top; float:right;' ></div>
-            </a>
-          </h2>
+          <!--  <a href="{% url 'export-'|add:objs %}">-->
+          <!--    <div class='icon icon-download btn' style='vertical-align:top; float:right;' ></div>-->
+          <!--  </a>-->
+          <!--</h2>-->
           
           <div class="modal fade hide" id="modal-object" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
