--- a/events/templates/events/event-list.html
+++ b/events/templates/events/event-list.html
@@ -24,7 +24,7 @@
         {% endif %}
       </tr>
     </thead>
-    <tbody style='vertical-align:middle;'>
+    <tbody>
     {% for event in event_category.list %}
       <tr>
         <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
