--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,6 +3,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/flavicon.ico' %}"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
