--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -3,81 +3,114 @@
 {% block content %}
 
 <div class="container-fluid background-container list-view" id='{{objs}}' style='background:#2A2A2A'>  
-
-<div class='row mx-4'>
-
-
-  <div class='col' style='background:#FFF;'>
-    
-    <div class="row" style=''>
-        <div class='col-12 py-4 '>
-          <div class='row event-header-details text-lowercase'>
-            <div class='col-12'>
-              <span class='event-title' style='font-size:1.5em;font-weight:100;'>{{objs}}</span>
-              <div class='btn icon icon-create add-object js-create-object' style='vertical-align:top;' data-url="{% url obj|add:'-create' %}"></div>
-              <form class='float-right'>
-                <select class="form-control" style='display:inline-block;width:200px;'>
-                  <option>Save</option>
-                  <option>Print</option>
-                  <option>Export</option>
-                  <option>Email</option>
-                </select>
-                <button type="button" class="btn btn-dark submit"><span>Submit</span></button>
-              </form><br />
+  <div class='row mx-4'>
+    <div class='col' style='background:#FFF;'>
+      
+      <div class="row">
+          <div class='col-12 py-4 '>
+            <div class='row event-header-details text-lowercase'>
+              <div class='col-12'>
+                <span class='event-title' style='font-size:1.5em;font-weight:100;'>{{objs}}</span>
+                <div class='btn icon icon-create add-object js-create-object' style='vertical-align:top;' data-url="{% url obj|add:'-create' %}"></div>
+                <form class='float-right'>
+                  <select class="form-control" style='display:inline-block;width:200px;'>
+                    <option>Save</option>
+                    <option>Print</option>
+                    <option>Export</option>
+                    <option>Email</option>
+                  </select>
+                  <button type="button" class="btn btn-dark submit"><span>Submit</span></button>
+                </form><br />
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    <hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />  
-    
-    <div class='row'>
-      <div class='col-4'>
-        
-        <div class="card">
-          <div class="card-header">
-            Summary:
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-        
-                <div class="card">
-          <div class="card-header">
-            Event Details:
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go to Event</a>
-          </div>
-        </div>
-        
-        
-      </div>
-      <div class='col-8'>
       
-    <div class='card-body mx-4 align-center' style='background:white;'>
+      <hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />  
+      
+      <div class='row' style='margin:40px;'>
+        
+        <div class='col-4'>
+          <div class="card">
+            <div class="card-header">Summary:</div>
+            <div class="card-body">
+              
+              <h5 class="card-title">
+                <span>Today's Event: </span>
+                <a data-toggle="collapse" href="#todaysEvent" role="button">{Coldplay}</a>
+              </h5> 
+              <div class="collapse" id="todaysEvent">
+                <div class="card card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+              </div>
+              
+              <h5 class="card-title">
+                <span>Next Event: </span>
+                <a data-toggle="collapse" href="#nextEvent" role="button">{Chiefs}</a>
+              </h5> 
+              <div class="collapse" id="nextEvent">
+                <div class="card card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+              </div>
+              
+              <h5 class="card-title">
+                <span>Last Event: </span>
+                <a data-toggle="collapse" href="#lastEvent" role="button">{Depeche Mode}</a>
+              </h5> 
+              <div class="collapse" id="lastEvent">
+                <div class="card card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+              </div>
+              
+              <h5 class="card-title">
+                <span>Events This Week: </span>
+                <a data-toggle="collapse" href="#weeksEvent" role="button">{3}</a>
+              </h5> 
+              <div class="collapse" id="weeksEvent">
+                <div class="card card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+              </div>
+              
 
-          <div class="modal fade hide" id="modal-object" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content"></div>
+            </div>
+          </div>
+
+          
+          
+          <div class="card">
+            <div class="card-header">Event Details:</div>
+            <div class="card-body">
+              <h5 class="card-title">##Event Name</h5>
+              <p class="card-text">Date, Time</p>
+              <p class="card-text">Doors At: #:##PM</p>
+              <p class="card-text">Scheduled Workers: #</p>
+              <p class="card-text">Alcohol: Yes</p>
+              <a href="#" class="btn btn-primary">Scheduling</a>
             </div>
           </div>
           
-          {% if app %}
-          {% include 'event-templates'|add:'/'|add:obj|add:'-list.html' %}
-          {% else %}
-          {% include objs|add:'/'|add:obj|add:'-list.html' %}
-          {% endif %}
-
+        </div>
+      
+      <div class='col-8'>
+        <div class='mx-4 align-center'>
+            <div class="modal fade hide" id="modal-object" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content"></div>
+              </div>
+            </div>
+            {% if app %}
+            {% include 'event-templates'|add:'/'|add:obj|add:'-list.html' %}
+            {% else %}
+            {% include objs|add:'/'|add:obj|add:'-list.html' %}
+            {% endif %}
+          </div>
+        </div>
+      </div>
     </div>
-    </div>
-    </div>
-    
-    
-  </div>
   </div>
 </div>
 
