--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -31,8 +31,8 @@
       <div class='row' style='margin:40px;'>
         
         <div class='col-4'>
-          <div class="card">
-            <div class="card-header">Summary:</div>
+          <div class="card mb-4">
+            <div class="card-header">Summary</div>
             <div class="card-body">
               
               <h5 class="card-title">
@@ -82,7 +82,7 @@
           
           
           <div class="card">
-            <div class="card-header">Event Details:</div>
+            <div class="card-header">Event Details</div>
             <div class="card-body">
               <h5 class="card-title">##Event Name</h5>
               <p class="card-text">Date, Time</p>
