--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -2,35 +2,35 @@
 {% load staticfiles %}
 {% block content %}
 
-<div class="container-fluid background-container list-view" id='{{objs}}' style='background:#2A2A2A'>  
+<div class="container-fluid background-container list-view" id='{{objs}}'>  
   <div class='row mx-4'>
-    <div class='col' style='background:#FFF;'>
+    <div class='col pl-0'>
       
       <div class="row">
-          <div class='col-12 py-4 '>
+          <div class='col-12 pt-4 '>
             <div class='row event-header-details text-lowercase'>
               <div class='col-12'>
-                <span class='event-title' style='font-size:1.5em;font-weight:100;'>{{objs}}</span>
-                <div class='btn icon icon-create add-object js-create-object' style='vertical-align:top;' data-url="{% url obj|add:'-create' %}"></div>
-                <form class='float-right'>
-                  <select class="form-control" style='display:inline-block;width:200px;'>
-                    <option>Save</option>
-                    <option>Print</option>
-                    <option>Export</option>
-                    <option>Email</option>
-                  </select>
-                  <button type="button" class="btn btn-dark submit"><span>Submit</span></button>
-                </form><br />
+                <span class='event-title' style='font-size:2em;font-weight:100;'>{{objs}}</span>
+                <!--<div class='btn icon icon-create add-object js-create-object' style='vertical-align:top;width:20px;height:20px;' data-url="{% url obj|add:'-create' %}"></div>-->
+                <!--<form class='float-right'>-->
+                <!--  <select class="form-control" style='display:inline-block;width:200px;'>-->
+                <!--    <option>Save</option>-->
+                <!--    <option>Print</option>-->
+                <!--    <option>Export</option>-->
+                <!--    <option>Email</option>-->
+                <!--  </select>-->
+                <!--  <button type="button" class="btn btn-dark submit"><span>Submit</span></button>-->
+                <!--</form><br />-->
               </div>
             </div>
           </div>
         </div>
       
-      <hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />  
+      <!--<hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />  -->
       
-      <div class='row' style='margin:40px;'>
+      <div class='row' style='margin-top:30px;'>
         
-        <div class='col-4'>
+        <div class='col-2'>
           <div class="card mb-4">
             <div class="card-header">Summary</div>
             <div class="card-body">
@@ -95,7 +95,7 @@
           
         </div>
       
-      <div class='col-8'>
+      <div class='col-10'>
         <div class='mx-4 align-center'>
             <div class="modal fade hide" id="modal-object" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
