Update list view card headers

--- a/events/templates/events/event-list.html
+++ b/events/templates/events/event-list.html
@@ -5,7 +5,7 @@
 
 {% if forloop.first %}
 <div class="card mb-4">
-  <div class="card-header">
+  <div class="card-header list-header">
     <span>Upcoming Events</span>
     <form class='float-right'>
       <select class="form-control" style='display:inline-block;width:200px;'>
@@ -18,7 +18,7 @@
   <div class="card-body">
 {% else %}
 <div class="card mb-4">
-  <div class="card-header">
+  <div class="card-header list-header">
     <span>Previous Events</span>
     <form class='float-right'>
       <select class="form-control" style='display:inline-block;width:200px;'>
