--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -67,3 +67,13 @@
 .table td {
   vertical-align:middle;
 }
+
+.list-header {
+  line-height: 1em;
+  letter-spacing: 1.5px;
+  font-size: 1em;
+  font-weight: 600;
+  color: rgb(85, 85, 85);
+  position: relative;
+  text-transform: uppercase;
+}
