--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -32,7 +32,7 @@
         
         <div class='col-2'>
           <div class="card mb-4">
-            <div class="card-header">Summary</div>
+            <div class="card-header list-header">Summary</div>
             <div class="card-body">
               
               <h5 class="card-title">
@@ -82,7 +82,7 @@
           
           
           <div class="card">
-            <div class="card-header">Event Details</div>
+            <div class="card-header list-header">Event Details</div>
             <div class="card-body">
               <h5 class="card-title">##Event Name</h5>
               <p class="card-text">Date, Time</p>
