--- a/events/templates/events/detail/ed-board/loc-card.html
+++ b/events/templates/events/detail/ed-board/loc-card.html
@@ -4,11 +4,11 @@
 {% for parent, attr in locNum.items %}
   {% if attr.active %}
   
-      <div class='board-column' value='0' id='{{attr.location|slugify}}'>
-        <div class='board-column-header'>
-          <div class='location-title text-uppercase'>
-            <span>{{attr.location}}</span>
-            <a class='add-shift float-right' value='0'>+</a>
+      <div class='board-column p-0 mt-0' value='0' id='{{attr.location|slugify}}'>
+        <div class='board-column-header mt-0 pb-0' style='background:rgba(0, 0, 0, 0.83);'>
+          <div class='list-header text-uppercase d-inline-block px-4' style='width:100%;color:white;font-weight:400;'>
+            <span style='line-height:2.1;vertical-align:middle;'>{{attr.location}}</span>
+            <a class='add-shift float-right' style='line-height:1.7em' value='0'>+</a>
           </div>
         </div>
         {% for shift, scheduled in attr.positions.items %}
