--- a/events/templates/events/event-list.html
+++ b/events/templates/events/event-list.html
@@ -5,30 +5,30 @@
 
 {% if forloop.first %}
 <div class="card mb-4">
-  <div class="card-header list-header">
-    <span>Upcoming Events</span>
-    <form class='float-right'>
-      <select class="form-control" style='display:inline-block;width:200px;'>
-        <option>Print</option>
-        <option>Export</option>
-        <option>Email</option>
-      </select>
-    </form>
+  <div class="card-header list-header" data-toggle="collapse" href="#collapse-future-events">
+    <span>Upcoming Events ></span>
+    <!--<form class='float-right'>-->
+    <!--  <select class="form-control" style='display:inline-block;width:200px;'>-->
+    <!--    <option>Print</option>-->
+    <!--    <option>Export</option>-->
+    <!--    <option>Email</option>-->
+    <!--  </select>-->
+    <!--</form>-->
   </div>
-  <div class="card-body">
+  <div class="card-body" id='collapse-future-events'>
 {% else %}
 <div class="card mb-4">
-  <div class="card-header list-header">
-    <span>Previous Events</span>
-    <form class='float-right'>
-      <select class="form-control" style='display:inline-block;width:200px;'>
-        <option>Print</option>
-        <option>Export</option>
-        <option>Email</option>
-      </select>
-    </form>
+  <div class="card-header list-header" data-toggle="collapse" href='#collapse-previous-events'>
+    <span>Previous Events ></span>
+    <!--<form class='float-right'>-->
+    <!--  <select class="form-control form-control-sm" style='display:inline-block;width:200px;'>-->
+    <!--    <option>Print</option>-->
+    <!--    <option>Export</option>-->
+    <!--    <option>Email</option>-->
+    <!--  </select>-->
+    <!--</form>-->
   </div>
-  <div class="card-body">
+  <div class="card-body collapse" id='collapse-previous-events'>
 {% endif %}
               
               
