--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -35,40 +35,40 @@
             <div class="card-header list-header">Summary</div>
             <div class="card-body">
               
-              <h5 class="card-title">
+              <div class="card-title">
                 <span>Today's Event: </span>
-                <a data-toggle="collapse" href="#todaysEvent" role="button">{Coldplay}</a>
-              </h5> 
+                <a data-toggle="collapse" href="#todaysEvent" role="button">Coldplay</a>
+              </div> 
               <div class="collapse" id="todaysEvent">
                 <div class="card card-body">
                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                 </div>
               </div>
               
-              <h5 class="card-title">
+              <div class="card-title">
                 <span>Next Event: </span>
-                <a data-toggle="collapse" href="#nextEvent" role="button">{Chiefs}</a>
-              </h5> 
+                <a data-toggle="collapse" href="#nextEvent" role="button">Spokane Chiefs</a>
+              </div> 
               <div class="collapse" id="nextEvent">
                 <div class="card card-body">
                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                 </div>
               </div>
               
-              <h5 class="card-title">
+              <div class="card-title">
                 <span>Last Event: </span>
-                <a data-toggle="collapse" href="#lastEvent" role="button">{Depeche Mode}</a>
-              </h5> 
+                <a data-toggle="collapse" href="#lastEvent" role="button">Depeche Mode</a>
+              </div> 
               <div class="collapse" id="lastEvent">
                 <div class="card card-body">
                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                 </div>
               </div>
               
-              <h5 class="card-title">
+              <div class="card-title mb-0">
                 <span>Events This Week: </span>
-                <a data-toggle="collapse" href="#weeksEvent" role="button">{3}</a>
-              </h5> 
+                <a data-toggle="collapse" href="#weeksEvent" role="button">3</a>
+              </div> 
               <div class="collapse" id="weeksEvent">
                 <div class="card card-body">
                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
@@ -84,12 +84,12 @@
           <div class="card">
             <div class="card-header list-header">Event Details</div>
             <div class="card-body">
-              <h5 class="card-title">##Event Name</h5>
+              <div class="card-title">Event Name</div>
               <p class="card-text">Date, Time</p>
               <p class="card-text">Doors At: #:##PM</p>
               <p class="card-text">Scheduled Workers: #</p>
               <p class="card-text">Alcohol: Yes</p>
-              <a href="#" class="btn btn-primary">Scheduling</a>
+              <a href="#" class="btn btn-primary">See Schedule</a>
             </div>
           </div>
           
